Add test.user for tracking demonstration
- Added test.user@bizcloudexperts.com
- Assigned to developers group
- No access keys required (console only)
- This commit demonstrates audit trail tracking

--- a/config/users.yaml
+++ b/config/users.yaml
@@ -13,3 +13,8 @@ users:
     email: "ganesh.kodmur@bizcloudexperts.com"
     groups: ["developers", "ec2-manage"]
     access_key_required: true
+    
+  - name: "test.user"
+    email: "test.user@bizcloudexperts.com"
+    groups: ["developers"]
+    access_key_required: false
