Test GitHub Actions: Add s3-read group to test.user
- Added s3-read group to test.user permissions
- This change will trigger GitHub Actions workflow
- Testing automated deployment and tracking system

--- a/config/users.yaml
+++ b/config/users.yaml
@@ -16,5 +16,5 @@ users:
     
   - name: "test.user"
     email: "test.user@bizcloudexperts.com"
-    groups: ["developers"]
+    groups: ["developers", "s3-read"]
     access_key_required: false
